# simple-autonomous-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
examples/: agent_real_api.py  async_real_api.py  real_api.py
personas/: analyst.yaml  researcher.yaml
scripts/: check_dedup.py
simple_agent/: __init__.py  agent.py  config.py  llm.py  persona.py  pipeline.py  quality.py  state.py  versioning.py
tests/: _api_baseline.json  conftest.py  test_agent.py  test_agent_async.py  test_api_contract.py  test_async_llm.py  test_async_pipeline.py  test_dedup_gate.py  test_json_sanitize.py  test_llm.py  test_persona.py  test_phase2_features.py  test_phase3_optional.py  test_pipeline.py  test_quality.py  test_state.py  test_versioning.py
