[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-autonomous-agent"
version = "0.3.1"
description = "Minimal Agent + multi-model LLM pipeline in ~1,300 lines"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = ["llm", "agents", "openai", "pipeline", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/onblueroses/simple-autonomous-agent"
Repository = "https://github.com/onblueroses/simple-autonomous-agent"
Issues = "https://github.com/onblueroses/simple-autonomous-agent/issues"

[tool.setuptools.packages.find]
include = ["simple_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
